--- a/GoodStanding-upnc-WC.html
+++ b/GoodStanding-upnc-WC.html
@@ -60,7 +60,7 @@
                     	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bglogo.png" alt="upsmf logo images"></div>
                     	 <div class="s-division">
                             <div class="row">
-                                    <p class="title1">Ref. No : {{credentialSubject.certificateNumber}}</p>
+                                    <p class="title1">Ref. No : {{credentialSubject.registrationNumber}}</p>
                             </div>
                             <div class="row">
                                 <p class="title2">Date: {{credentialSubject.courseDate}}</p>
@@ -97,19 +97,19 @@
                             <div class="subject ">
                                 <p class="title">Training center</p>
                                 <p class="sep">:</p>
-                                <p class="result"><span class="d-block">{{credentialSubject.nursingCollage}}</span>
+                                <p class="result"><span class="d-block">{{credentialSubject.trainingCenter}}</span>
                                     
                                 </p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Validity of Registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.validityOfRegistration}}</p>
+                                <p class="result">{{credentialSubject.courseDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Date of Birth</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dateOfBirth}}</p>
+                                <p class="result">{{credentialSubject.joiningDate}}</p>
                             </div>
                         </div>
                         <div class="para">
@@ -125,7 +125,7 @@
                         </div>
                         <div class="dateandno">
                             <div class="daterow">
-                                <h4>No: {{credentialSubject.finalYearRollNo}}</h4>
+                                <h4>No: {{credentialSubject.registrationNumber}}</h4>
                                 <h4>Dated :{{credentialSubject.courseDate}}</h4>
                             </div>
                         </div>
