--- a/GoodStanding-upnc-WC.html
+++ b/GoodStanding-upnc-WC.html
@@ -87,7 +87,7 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.joiningDate}}</p>
+                                <p class="result">{{credentialSubject.registrationNumber}} dated {{credentialSubject.joiningDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
