--- a/BDS_REG_DUPLICATE_WC.html
+++ b/BDS_REG_DUPLICATE_WC.html
@@ -83,7 +83,7 @@
                         <div class="en-details">
                             <div class="subject number">
                                 <p class="title">Registration in Part</p>
-                                <p class="result">{{credentialSubject.regNumber}}</p>
+                                <p class="result">A</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Name</p>
