--- a/DH-REG.html
+++ b/DH-REG.html
@@ -81,7 +81,7 @@
                         <div class="en-details">
                             <div class="subject number">
                                 <p class="title">Registration in Part</p>
-                                <p class="result">finalYearRollNo</p>
+                                <p class="result">{{credentialSubject.finalYearRollNo}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Name</p>
