--- a/MBBS-Permanent-Registration-Certificate-UP.html
+++ b/MBBS-Permanent-Registration-Certificate-UP.html
@@ -124,7 +124,7 @@
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dnurseRegDate}}, Lucknow(U.P)</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}}, Lucknow(U.P)</p>
                             </div>
                             <div >
                                 <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>Schedule 1</b></p>
