--- a/GoodStanding.html
+++ b/GoodStanding.html
@@ -104,7 +104,7 @@
                         <div class="subject passyear">
                             <p class="sep">8.</p>
                             <p class="title">Registration Number</p>
-                            <p class="result">{{credentialSubject.regNumber}}</p>
+                            <p class="result">{{credentialSubject.registrationNumber}}</p>
                         </div>
                         
                         <div class="subject passyear">
