--- a/BDS_REG_DUPLICATE_WC.html
+++ b/BDS_REG_DUPLICATE_WC.html
@@ -8,6 +8,7 @@
     <!-- <link href="css/style.css" rel="stylesheet"> -->
     
     <style type="text/css">
+	@media print {body {zoom: 90%;}}
        .d-block,img{display:block}.mainSection .cer-name,.text-uppercase{text-transform:uppercase}
        .mb-0,header h3{margin-bottom:0}
        .m-0,header p{margin:0}
