--- a/NOC-0001.html
+++ b/NOC-0001.html
@@ -62,7 +62,7 @@
             <div class="cc-container">
                 <header>
                    
-                    <h3>U.P. NURSES & MIDWIVES COUNCILL</h3>
+                    <h3>U.P. NURSES & MIDWIVES COUNCIL</h3>
                     <p class="address1">5, SARVAPALLI, MALL AVENUE ROAD, LUCKNOW - 226001,PHONE: 0522-2238846</p>
                     <p class="address1">website:www.upnursescouncil.org</p>
 
