--- a/Matrimony-Name-Change.additional-WC.html
+++ b/Matrimony-Name-Change.additional-WC.html
@@ -42,14 +42,14 @@
                 .f-division .profile-scan1 .barcode{width:6rem;display:flex;height: 2rem;} .f-division .profile-scan1{align-items: end;display: flex;flex-direction: column;}
                 .f-division .org-section .logoimage {width: 70%;display: flex;margin-left: 1rem;margin-top: 1rem;}.mainSection .en-details .annotion {font-weight: 700;}.subject1 .title1{color: #043aff;font-weight: 700;}
                 header .reg-no{display: flex;} footer .f-division .studentID2{width: 50%;margin-left: 2rem;}
-                .issued-on{margin-top: 4rem;} .watermark{z-index:0;left:50%; top: 71%;width: 417px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
+                .issued-on{margin-top: 4rem;}.watermark{position:absolute;left:50%;top:42%;transform:translate(-50%,-50%);WIDTH:50%;z-index:0;opacity: .8;}
     </style>
 </head>
 <body>
     <div class="reg-certificate">
         
         <div class="en-certificate">
-            <div class="bg-upsmf watermark"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/watermark.png" alt="web copy certificate"></div>
+            <div class="watermark"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/watermark.png" alt="web copy certificate"></div>
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
