--- a/NOC-0001.html
+++ b/NOC-0001.html
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="tobody">
                                         <span class="d-block"><b>The Registrar</b></span>
-                                        <span class="d-block">BIHAR NURSES & MIDWIFES COUNCILL</span>
+                                        <span class="d-block">BIHAR NURSES & MIDWIVES COUNCIL</span>
                                         <span class="d-block">Opp. Mata Sundari College for Women,</span>
                                         <span class="d-block">New Delhi - 110002</span>
         
@@ -103,7 +103,7 @@
                             </div>
                             <div class="para">
                                 <span class="d-block">Sir/Madam,</span><br>
-                                <p class="c-block">Kindly refer your letter no. {{credentialSubject.certificateNumber}} date {{credentialSubject.nurseRegDate}} It is to inform you that under mentioned candidates(s) has/have regidstered with this council & the registration is still in force.</p><br>
+                                <p class="c-block">Kindly refer your letter no. {{credentialSubject.certificateNumber}} date {{credentialSubject.nurseRegDate}} It is to inform you that under mentioned candidates(s) has/have registered with this council & the registration is still in force.</p><br>
                                     
                             </div>
                             <table>
