--- a/bsc-r-corr-WC.html
+++ b/bsc-r-corr-WC.html
@@ -102,7 +102,7 @@
                             </div>     
 				<div class="passyears">
 				    <p class="title">
-					Entered today in <span style="color: #000000;"> Part I</span> of the <span style="color: #000000;">{{credentialSubject.courseName}}]</span>
+					Entered today in <span style="color: #000000;"> Part III</span> of the <span style="color: #000000;">{{credentialSubject.courseName}}]</span>
 					Register under the U.P. Nurses, Midwives, Asstt. Midwives and Health Visitor's
 					Registration Act. 1934 as a Registered Nurse</span>
 				    </p>
