--- a/duplicate-r-WC.html
+++ b/duplicate-r-WC.html
@@ -102,9 +102,9 @@
                             </div>     
 				<div class="passyears">
 				    <p class="title">
-					Entered today in <span style="color: #000000;"> Part I</span> of the <span style="color: #000000;">{{credentialSubject.courseName}}]</span>
+					Entered today in <span style="color: #000000;"> Part III</span> of the <span style="color: #000000;">{{credentialSubject.courseName}}]</span>
 					Register under the U.P. Nurses, Midwives, Asstt. Midwives and Health Visitor's
-					Registration Act. 1934 as a Registered Nurse</span>
+					Registration Act. 1934 as a Registered Nurse and Midwife</span>
 				    </p>
 				</div>                       
                             <div class="subject pass year">
