--- a/bsc-r-corr-WC.html
+++ b/bsc-r-corr-WC.html
@@ -104,7 +104,7 @@
 				    <p class="title">
 					Entered today in <span style="color: #000000;"> Part III</span> of the <span style="color: #000000;">{{credentialSubject.courseName}}]</span>
 					Register under the U.P. Nurses, Midwives, Asstt. Midwives and Health Visitor's
-					Registration Act. 1934 as a Registered Nurse</span>
+					Registration Act. 1934 as a Registered Nurse and Midwife</span>
 				    </p>
 				</div>                       
                             <div class="subject pass year">
