--- a/Permenant-registratio-re-issue.html
+++ b/Permenant-registratio-re-issue.html
@@ -16,7 +16,7 @@
        font-weight:700;font-style:normal}*,::after,::before{box-sizing:border-box}
        html{font-size:16px}body{color:#0e0e10;font-family:Calibri;font-weight:400}img{max-width:100%}.mt-0{margin-top:0}.mt-5{margin-top:.3125rem}.mt-10{margin-top:10px}.mt-16{margin-top:1rem}
        .mb-5{margin-bottom:.3125rem}.mb-10{margin-bottom:.625rem}.mb-15{margin-bottom:.9375rem}.ft-8{font-size:.5rem}.alpha-5{opacity:.5}
-       .small{font-size:small;line-height:2px;color: red; margin-top: 1rem;}.h3,h3,p{line-height:1.5}.opt-8{opacity:80%}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header h4,header
+       .small{font-size:12px;line-height:2px;color: red; margin-top: 1rem;}.h3,h3,p{line-height:1.5}.opt-8{opacity:80%}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header h4,header
         p {text-align:center}.secondaryColor{color:#043aff}.cc-container{position:relative;z-index:1}.bg-upsmf,
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;    top: 49%;width: 417px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
         .en-certificate{width:630px;height:990px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
@@ -142,7 +142,8 @@
                                     
                                     
                                     <p class="small opt-8">U.P. Dental Council has the right to cancel the certificate, if any information is found to be 
-                                        incorrect or fake. As per present rules, this certificate is having lifetime validity.</p>
+                                        incorrect or fake.</p>
+                                        <p class="small opt-8">As per present rules, this certificate is having lifetime validity.</p>
                                 </div>
                                 <!-- <div class="row1">
                                     <img src="images/QR.jpeg">
