--- a/NPCC-r.html
+++ b/NPCC-r.html
@@ -20,11 +20,11 @@
         p {text-align:end}.secondaryColor{color:#2020a7}.cc-container{position:relative;z-index:1}.bg-upsmf,
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;top:55%;width:60%;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
         .en-certificate{width:595px;height:1040px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
-            display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
+            display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1rem;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem; text-align: center;}
             p{font-size:.875rem}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
             .en-details{width:100%;margin:1.2rem auto 0}.mainSection .cer-name{text-align:center;font-size:20px;color:#ec1f07;margin:1rem 0 0}
             .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0; margin-right: 16%;align-items: center;
-    justify-content: center;}.mainSection .cer-type{font-size:23px;color:#2020a7;margin-right: 41%}
+    justify-content: center;}.mainSection .cer-type{font-size:23px;color:#2020a7;margin-right: 0%;text-align: center;}
             .law .act,.org-section span{font-size:11px;font-family:Calibri;font-weight:700}.mainSection .en-details p{font-style: italic    ;}.annot p{word-spacing: 8px;line-height: 30pt;text-align: justify;text-indent: 100px;font-style: italic;}
              .subject{display:flex;margin-bottom:2px}.subject p{margin:0 0 5px;}.subject .title{width:6rem;font-weight: bold; color: #2020a7; margin-left: 6%;}.subject 
              .sep{width:1rem}.subject .result{font-family:Calibri;flex:0 0 62%}footer{left:0;right:0}
@@ -52,8 +52,8 @@
                    
                 </header>
                     <div class="mainSection">
-                    	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/diploma_SMF.jpg" alt="upsmf logo images"></div>
-                        <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
+                         <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/diploma_SMF.jpg" alt="upsmf logo images"></div>
+                        <h3>ADDITIONAL QUALIFICATION CERTIFICATE</h3>
                         <div class="s-division">
                             <div class="row">
                                     <p class="title1">No. {{credentialSubject.finalYearRollNo}}</p>
@@ -127,4 +127,3 @@ As per present rules, this certificate is having lifetime validity.</6>
     </div>
 </body>
 </html>
-
