--- a/BDS_REG_DUPLICATE.html
+++ b/BDS_REG_DUPLICATE.html
@@ -65,8 +65,8 @@
 						</div>
 						<div class="row1">
                             <div class="number">
-                                <p class="title2">Roll No :</p>
-                                <p> {{credentialSubject.finalYearRollNo}}</p>
+                                <p class="title2">Date :</p>
+                                <p> {{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
 						</div>
