--- a/BDS_REG_DUPLICATE.html
+++ b/BDS_REG_DUPLICATE.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="row1">
                             <div class="number">
-                                <p class="title2">Date :</p>
+                                <p class="title2">Dated :</p>
                                 <p> {{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
