--- a/BDS-REG-24987.html
+++ b/BDS-REG-24987.html
@@ -63,8 +63,8 @@
 						</div>
 						<div class="row1">
                             <div class="number">
-                                <p class="title2">Roll No :</p>
-                                <p>{{credentialSubject.finalYearRollNo}}</p>
+                                <p class="title2">Dated :</p>
+                                <p>{{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
 						</div>
