--- a/GoodStanding.html
+++ b/GoodStanding.html
@@ -21,7 +21,7 @@
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;top:58%;width:321px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
         .en-certificate{width:720px;height:1110px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
             display:flex}.h1,h1,h2,h3,h4,h5{font-family:Calibri;font-weight:700;margin-bottom:12px;     margin-right: 11%;    margin-top: 1px;}h6{margin-bottom:1px}.h3,h3{font-size:1.5rem}
-            p{font-size:16px}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
+            p{font-size:16px}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px; margin-right: 0;}.mainSection 
             .en-details{width:100%;margin:4rem auto 0}.mainSection .cer-name{text-align:center;font-size:20px;margin:1rem 0 0}
             .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{font-size:21px;color:#2020a7}
             .law .act,.org-section span{font-size:16px;font-family:Calibri;}.mainSection .en-details
@@ -32,7 +32,7 @@
              .studentID{width:150px;height:140px;border:2px solid #000;overflow:hidden;padding:6px;display:flex;align-items:center;justify-content:center}
              .f-division .profile-scan .sig-attest{width:110px;height:70px;overflow:hidden;border:2px solid #000;display:flex;align-items:center;
                 justify-content:center}.org-section span{margin-bottom:0}.org-section span img{height:25px;margin:0 auto;width: 103px;}.law .act{padding:0}
-                .top-logo{width:158px; height:156px;margin-left:240px}.act{margin-bottom: auto;text-align:center;font-size: 11pt;}
+                .top-logo{width:158px; height:156px;margin-left:240px}.act{margin-bottom: auto;text-align:center;font-size: 11pt; margin-right: 0;}
                 .act-det{margin-top: initial;text-align:center;font-size: 14pt;}.s-division{display:flex;justify-content:space-between;align-items: end;}
                 .s-division .row {flex: 1;align-items: end;}.row1 img{width: 73px;height: 73px;}
                 .subject1{display:flex;margin-bottom:4px}.subject1 p{margin:0 0 5px;}.subject1 .title{width:12rem;color: #2020a7;}.subject1 
@@ -50,7 +50,7 @@
             <div class="cc-container">
                 <header>
                    
-                    <h3>U.P. NURSES & MIDWIFES COUNCIL</h3>
+                    <h3>U.P. NURSES & MIDWIVES COUNCIL</h3>
                     <p class="address1">5, Sarvapalli, Mall Avenue Road, Lucknow - 226001</p>
                     <P class="address1">Phone: 0522-2238846, Fax: 0522-2236600</P>
                     <P class="address1">Website: www.upnursescouncil.org</P>
