--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                         <div class="para">
-                            <p>There is no complaint or adverse information against her. We certtify her good standing.</p>
+                            <p>There is no complaint or adverse information against her. We certify her good standing.</p>
                         </div>
                         <div class="f-division">
                            
