--- a/Foreign-certificate-new.html
+++ b/Foreign-certificate-new.html
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="para2">
-                            <p>Copy <b><u>{{credentialSubject.name}} D/o {{credentialSubject.mothersName}, {{credentialSubject.address}},</b></u>  for information.</p>
+                            <p>Copy <b><u>{{credentialSubject.name}} D/o {{credentialSubject.mothersName}}, {{credentialSubject.address}},</b></u>  for information.</p>
                         </div>
                         <div class="f-division">
                            
