--- a/Foreign-certificate-new-WC.html
+++ b/Foreign-certificate-new-WC.html
@@ -56,7 +56,7 @@
 
                 </header>
                     <div class="mainSection">
-                    	 <div class="top-logo"><img src="images/gnmlogoc.jpg" alt="upsmf logo images"></div>
+                        <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/gnmlogoc.jpg" alt="upsmf logo images"></div>
                     	 <div class="s-division">
                             <div class="row">
                                     <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
@@ -73,13 +73,13 @@
                             </div>
                             <div class="tobody">
                                 <span class="d-block"><b>{{credentialSubject.foreignCouncilName}}</b></span>
-                                <span class="data">{{credentialSubject.foreignCouncilAddress}}</span
+                                <span class="data">{{credentialSubject.foreignCouncilAddress}}</span>
                                 <span class="d-block">{{credentialSubject.foreignCouncilCountry}}</span>
 
                             </div>
                             <div class="para">
                                 <span class="d-block"> Sir/Madam,</span>
-                                <p class="c-block">Kindly refer the request for verification of registration particular of <b><u>{{credentialSubject.name}} D/o {{credentialSubject.mothersName}},</u></b> This is certified that She has qualified General Nursing & Midwifery and her name is registered  as a General Nursing & Midwifery under registration number <b>{{credentialSubject.registrationNumber}} </b>dated <b>{{credentialSubject.registrationIssueDate}}</b>. Her registration is still in force.</p>
+                                <p class="c-block">Kindly refer the request for verification of registration particular of <b><u>{{credentialSubject.name}} D/o {{credentialSubject.fathersName}},</u></b> This is certified that She has qualified General Nursing & Midwifery and her name is registered  as a General Nursing & Midwifery under registration number <b>{{credentialSubject.registrationNumber}} </b>dated <b>{{credentialSubject.registrationIssueDate}}</b>. Her registration is still in force.</p>
                             </div>
                             
                         <div class="f-division">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="para2">
-                            <p>Copy <b><u>{{credentialSubject.name}} D/o {{credentialSubject.mothersName}}, {{credentialSubject.address}},</b></u>  for information.</p>
+                            <p>Copy <b><u>{{credentialSubject.name}} D/o {{credentialSubject.fathersName}}, {{credentialSubject.address}},</b></u>  for information.</p>
                         </div>
                         <div class="f-division">
                            
