--- a/goodstanding.html
+++ b/goodstanding.html
@@ -57,7 +57,7 @@
 						</div>
                         <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
 						<div class="row2">
-							<p class="title2">Dated : {{credentialSubject.joiningDate}}-{{credentialSubject.courseDate}}</p>
+							<p class="title2">Dated : {{credentialSubject.nurseRegDate}}</p>
 						</div>
 					</div>
                    
@@ -70,11 +70,11 @@
                            <span>{{credentialSubject.name}}</span><br>
                            <span>{{credentialSubject.address}}</span><br>
                            <span><font style='color:#2020a7'>HAS PASSED BDS (BACHELOR OF DENTAL SURGERY)</font></span><br>
-                           <span>FROM {{credentialSubject.nursingCollage}}</span><br>
+                           <span>FROM {{credentialSubject.instituteName}}</span><br>
                            <span><font style='color:#2020a7'>BDS DEGREE HAE BEEN AWARDED BY</font></span><br>
-                           <span>{{credentialSubject.university}} <font style='color:#2020a7'>{{credentialSubject.nursingCollage}} </font>Dr. PARUL SINGH HAS BEEN REGISTERED IN THIS COUNCIL.</span><br>
+                           <span>{{credentialSubject.universityName}} {{credentialSubject.courseName}} - {{credentialSubject.name}} HAS BEEN REGISTERED IN THIS COUNCIL.</span><br>
                            <span><font style='color:#2020a7'>UNDER DENTIST ACT 1948.(UNDER SECTION 32(2)/35(4)).</font></span><br>
-                           <span><font style='color:#2020a7'>AND BEARING REGISTRATION NO.</font>{{credentialSubject.regNumber}}<font style='color:#2020a7'> DATED</font> {{credentialSubject.courseDate}}</span><br>
+                           <span><font style='color:#2020a7'>AND BEARING REGISTRATION NO.</font>{{credentialSubject.regNumber}}<font style='color:#2020a7'> DATED</font> {{credentialSubject.registrationIssueDate}}</span><br>
                            <span>THIS IS HEREBY CERTIFIED THAT {{credentialSubject.name}} IS STILL</span><br>
                            <span><font style='color:#2020a7'>REGISTERED IN THIS COUNCIL AND IS LEGALLY ENTITLED TO PRATICE DENTISTRY IN INDIA.</font></span><br>
                            <span><font style='color:#2020a7'>AND</font></span><br>
