--- a/GoodStanding-upmc.html
+++ b/GoodStanding-upmc.html
@@ -62,7 +62,7 @@
                     <p class="address2">Website: www. upmedicalcouncil.org, Email:upmedicalcouncil@upsmfac.org</p>
                     <div class="mainSection">
                         <div class="row">
-                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Ref. No:</font> {{credentialSubject.council}}/GOODSTANDING.{{credentialSubject.certificateNumber}}{{credentialSubject.passingYear}}</p>
+                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Ref. No:</font> {{credentialSubject.council}}/GOODSTND.{{credentialSubject.certificateNumber}}{{credentialSubject.passingYear}}</p>
                             <div class="top-logo"><img src="images/mclogoc.jpg" alt="upsmf logo images"></div>
                             <p class="title1"><font style="color:rgb(74, 163, 226)" >Date: </font>{{credentialSubject.courseDate}}</p>
                         </div>
@@ -82,8 +82,8 @@
                             
                             <div class="para">
                                 <p class="c-block">This is to certify that {{credentialSubject.name}} D/O {{credentialSubject.fathersName}} is registered with
-                                    Uttar Pradesh Medical Council. She was registered as M.B.B.S on {{credentialSubject.joiningDate}} & her
-                                    Registration No. is {{credentialSubject.regNumber}} with{{credentialSubject.courseName}} ( {{credentialSubject.university}} ). Her registration is still
+                                    Uttar Pradesh Medical Council. She was registered as M.B.B.S on {{credentialSubject.registrationIssueDate}} & her
+                                    Registration No. is {{credentialSubject.registrationNumber}} with{{credentialSubject.courseName}} ( {{credentialSubject.university}} ). Her registration is still
                                     in force.</p><br>
                                     <p class="c-block">There is nothing adverse known against her and she commands a good standing in
                                         medical profession.</p><br>
