Update and rename goodstanding_updc.html to GoodStanding-updc.html

--- a/GoodStanding-updc.html
+++ b/GoodStanding-updc.html
@@ -67,14 +67,14 @@
                    <h4 class="cer-type">CERTIFICATE OF GOOD STANDING</h4>
                    <div class="en-details">
                        <div class="annot">
-                           <span>{{credentialSubject.name}}</span><br>
-                           <span>{{credentialSubject.address}}</span><br>
+                           <span>{{credentialSubject.name}} D/O {{credentialSubject.fathersName}}</span><br>
+                           <span>{{credentialSubject.presentAddress}}</span><br>
                            <span><font style='color:#2020a7'>HAS PASSED BDS (BACHELOR OF DENTAL SURGERY)</font></span><br>
                            <span>FROM {{credentialSubject.instituteName}}</span><br>
                            <span><font style='color:#2020a7'>BDS DEGREE HAE BEEN AWARDED BY</font></span><br>
                            <span>{{credentialSubject.universityName}} {{credentialSubject.courseName}} - {{credentialSubject.name}} HAS BEEN REGISTERED IN THIS COUNCIL.</span><br>
                            <span><font style='color:#2020a7'>UNDER DENTIST ACT 1948.(UNDER SECTION 32(2)/35(4)).</font></span><br>
-                           <span><font style='color:#2020a7'>AND BEARING REGISTRATION NO.</font>{{credentialSubject.regNumber}}<font style='color:#2020a7'> DATED</font> {{credentialSubject.registrationIssueDate}}</span><br>
+                           <span><font style='color:#2020a7'>AND BEARING REGISTRATION NO.</font>{{credentialSubject.registrationNumber}}<font style='color:#2020a7'> DATED</font> {{credentialSubject.registrationIssueDate}}</span><br>
                            <span>THIS IS HEREBY CERTIFIED THAT {{credentialSubject.name}} IS STILL</span><br>
                            <span><font style='color:#2020a7'>REGISTERED IN THIS COUNCIL AND IS LEGALLY ENTITLED TO PRATICE DENTISTRY IN INDIA.</font></span><br>
                            <span><font style='color:#2020a7'>AND</font></span><br>
