--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -68,15 +68,6 @@
                     </div>
                          
                         <div class="en-details">
-                            <div class="todetails">
-                                <h4 class="title1">To,</h4>
-                            </div>
-                            <div class="tobody">
-                                <span class="d-block"><b>Overseas Registration Department</b></span>
-                                <span class="d-block">{{credentialSubject.workPlace}}</span>
-
-
-                            </div>
                             <div class="para">
                                 <span class="d-block"> Sir/Madam,</span>
                                 <p class="c-block">This is certified that <b><u>{{credentialSubject.name}}D/o {{credentialSubject.mothersName}},</u></b> has qualified General Nursing & Midwifery and She is registered as General Nursing & Midwifery. She has been registered in this council as per details givem below:-</p>
@@ -103,7 +94,7 @@
                             <div class="subject ">
                                 <p class="title">Validity of Registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.courseDate}}</p>
+                                <p class="result">Life-Long (Permanent)</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Date of Birth</p>
