--- a/GoodStanding-updc.html
+++ b/GoodStanding-updc.html
@@ -67,7 +67,7 @@
                    <h4 class="cer-type">CERTIFICATE OF GOOD STANDING</h4>
                    <div class="en-details">
                        <div class="annot">
-                           <span>{{credentialSubject.name}} D/O {{credentialSubject.fathersName}}</span><br>
+                           <span>{{credentialSubject.name}} C/O {{credentialSubject.fathersName}}</span><br>
                            <span>{{credentialSubject.presentAddress}}</span><br>
                            <span><font style='color:#2020a7'>HAS PASSED BDS (BACHELOR OF DENTAL SURGERY)</font></span><br>
                            <span>FROM {{credentialSubject.instituteName}}</span><br>
