--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -70,7 +70,7 @@
                         <div class="en-details">
                             <div class="para">
                                 <span class="d-block"> Sir/Madam,</span>
-                                <p class="c-block">This is certified that <b><u>{{credentialSubject.name}} C/O {{credentialSubject.mothersName}},</u></b> has qualified General Nursing & Midwifery and She is registered as General Nursing & Midwifery. She has been registered in this council as per details givem below:-</p>
+                                <p class="c-block">This is certified that <b><u>{{credentialSubject.name}} C/O {{credentialSubject.fathersName}},</u></b> has qualified General Nursing & Midwifery and She is registered as General Nursing & Midwifery. She has been registered in this council as per details givem below:-</p>
                             </div>
                             <h4 class="title1"><u>{{credentialSubject.courseName}}</u></h4>
 
