--- a/GoodStanding-upmc.html
+++ b/GoodStanding-upmc.html
@@ -64,7 +64,7 @@
                         <div class="row">
                             <p class="title1"><font style="color:rgb(74, 163, 226)" >Ref. No:</font> {{credentialSubject.council}}/GOODSTND/{{credentialSubject.certificateNumber}}/{{credentialSubject.passingYear}}</p>
                             <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf logo images"></div>
-                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Date: </font>{{credentialSubject.courseDate}}</p>
+                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Date: </font>{{credentialSubject.nurseRegDate}}</p>
                         </div>
                     </div>
                 </header>
