--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -99,7 +99,7 @@
                             <div class="subject ">
                                 <p class="title">Date of Birth</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dob}</p>
+                                <p class="result">{{credentialSubject.dob}}</p>
                             </div>
                         </div>
                         <div class="para">
