--- a/GoodStanding-updc.html
+++ b/GoodStanding-updc.html
@@ -53,7 +53,7 @@
                     <div class="s-division">
 						<div class="row1">
 								<p class="title1">Ref No </p>
-                                <P>: {{credentialSubject.certificateNumber}}</P>
+                                <P>: {{credentialSubject.certificateNumber}}/{{credentialSubject.refNoYear}}</P>
 						</div>
                         <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
 						<div class="row2">
