--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -56,7 +56,7 @@
 
                 </header>
                     <div class="mainSection">
-                    	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bglogo.png" alt="upsmf logo images"></div>
+                    	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/gnmlogoc.jpg" alt="upsmf logo images"></div>
                     	 <div class="s-division">
                             <div class="row">
                                     <p class="title1">Ref. No : {{credentialSubject.certificateNumber}}/{{credentialSubject.refNoYear}}</p>
