--- a/Foreign-certificate-new.html
+++ b/Foreign-certificate-new.html
@@ -79,7 +79,7 @@
                             </div>
                             <div class="para">
                                 <span class="d-block"> Sir/Madam,</span>
-                                <p class="c-block">Kindly refer the request for verification of registration particular of <b><u>{{credentialSubject.name}} D/o {{credentialSubject.fathersName}},</u></b> This is certified that She has qualified General Nursing & Midwifery and her name is registered  as a General Nursing & Midwifery under registration number <b>{{credentialSubject.registrationNumber}} </b>dated <b>{{credentialSubject.registrationIssueDate}}</b>. Her registration is still in force.</p>
+                                <p class="c-block">Kindly refer the request for verification of registration particular of <b><u>{{credentialSubject.name}} C/O {{credentialSubject.fathersName}},</u></b> This is certified that She has qualified General Nursing & Midwifery and her name is registered  as a General Nursing & Midwifery under registration number <b>{{credentialSubject.registrationNumber}} </b>dated <b>{{credentialSubject.registrationIssueDate}}</b>. Her registration is still in force.</p>
                             </div>
                             
                         <div class="f-division">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="para2">
-                            <p>Copy <u><b>{{credentialSubject.name}} D/o {{credentialSubject.fathersName}}, {{credentialSubject.address}},</b></u>  for information.</p>
+                            <p>Copy <u><b>{{credentialSubject.name}} C/O {{credentialSubject.fathersName}}, {{credentialSubject.address}},</b></u>  for information.</p>
                         </div>
                         <div class="f-division">
                            
